components/4.18.x/ibm-summary.md
Camel Components

# IBM

The **ibm-** component allows you to work with the [IBM](https://cloud.ibm.com/). IBM offers a great palette of different components like Cloud Object Storage, Watson, Event Stream etc.

## IBM components

See the following for usage of each component:

[IBM Cloud Object Storage](ibm-cos-component.md)

Store and retrieve objects from IBM Cloud Object Storage.

[IBM Secrets Manager](ibm-secrets-manager-component.md)

Manage secrets in IBM Secrets Manager Service

[IBM Watson Discovery](ibm-watson-discovery-component.md)

Perform document understanding and search using IBM Watson Discovery

[IBM Watson Language](ibm-watson-language-component.md)

Perform natural language processing using IBM Watson Natural Language Understanding

[IBM Watson Speech to Text](ibm-watson-speech-to-text-component.md)

Convert speech audio to text using IBM Watson Speech to Text

[IBM Watson Text to Speech](ibm-watson-text-to-speech-component.md)

Convert text to natural-sounding speech using IBM Watson Text to Speech

[IBM watsonx.ai](ibm-watsonx-ai-component.md)

Interact with IBM watsonx.ai foundation models for text generation, chat, embeddings, and more.